add statistics; add all definitions to openapi.yml
